# RAG_LAW_VN

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
config/: config.py
src/embedding/: embedd_data.py  embedd_model.py
src/eval/: eval_retrieve.py
src/generation/: rag.py
src/indexing/: qdrantvdb.py
src/retrieve/: retrieve_rerank.py
src/vectorstores/: qdrant_store.py
